--- a/greeting/templates/greeting/index.html
+++ b/greeting/templates/greeting/index.html
@@ -6,9 +6,63 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ini title</title>
+  <!-- CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
+  <script type="text/javascript"> 
+    // function display_c(){
+    //   var refresh=1000; // Refresh rate in milli seconds
+    //   mytime=setTimeout('display_clocktime()',refresh)
+    // }
+    
+    function display_clocktime() {
+      var display_time = new Date()
+      var hour=display_time.getHours();
+      var minute=display_time.getMinutes();
+      var second=display_time.getSeconds();
+      if(hour <10 ) {hour='0'+hour;}
+      if(minute <10 ) {minute='0' + minute; }
+      if(second<10) {second='0' + second;}
+      var display_only_time = hour + ':' + minute + ':' + second
+      document.getElementById('clocktime').innerHTML = display_only_time;
+      var refresh=1000; // Refresh rate in milli seconds
+      mytime=setTimeout('display_clocktime()',refresh)
+    }
+
+    function typeWriter() {
+      var i = 0;
+      var txt = "{{ greeting_word }}"; /* The text */
+      console.log(txt);
+      var speed = 50; /* The speed/duration of the effect in milliseconds */
+      if (i < txt.length) {
+        document.getElementById("greeting_text").innerHTML += txt.charAt(i);
+        i++;
+        setTimeout(typeWriter, speed);
+      }
+    }
+
+    function start() {
+      // display_clocktime();
+      typeWriter();
+    }
+  </script>
+
 </head>
-<body>
-  {{ now }}
-  {{ greeting_word }}
+<body onload=display_clocktime();>
+  <section>
+    <div class="greeting">
+      <span id='clocktime'></span>
+      <br>
+      <!-- <p id="greeting_text"></p> -->
+      {{ greeting_word }}
+    </div>
+  </section>
+
+  <!-- JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
